[project]
name = "gytmdl"
description = "A Python CLI app for downloading YouTube Music songs with tags from YouTube Music"
requires-python = ">=3.8"
authors = [{ name = "glomatico" }]
dependencies = [
    "click",
    "inquirerpy",
    "mutagen",
    "pillow",
    "yt-dlp",
    "ytmusicapi",
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/glomatico/gytmdl"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
gytmdl = "gytmdl.cli:main"
